Fix LRU tab behaviour

BUG: 434062